--- a/Kattis/bin/.gitignore
+++ b/Kattis/bin/.gitignore
@@ -2,3 +2,7 @@
 /R2.class
 /QualityAdjustedLifeYear.class
 /HelloWorld.class
+/TakeTwoStones.class
+/QuadrantSelection.class
+/Oddities.class
+/LastFactorialDigit.class
