Problem "Cake" solved.

--- a/Kattis/bin/.gitignore
+++ b/Kattis/bin/.gitignore
@@ -1,51 +1,8 @@
-/SolvingForCarrots.class
-/R2.class
-/QualityAdjustedLifeYear.class
-/HelloWorld.class
-/TakeTwoStones.class
-/QuadrantSelection.class
-/Oddities.class
-/LastFactorialDigit.class
-/HissingMicrophone.class
-/Filip.class
-/Faktor.class
-/Bijele.class
-/Sibice.class
-/Planina.class
-/Template.class
-/StuckInATimeLoop.class
-/NastyHacks.class
-/Ladder.class
-/IsItHalloween.class
-/GrassSeedInc.class
-/DetailedDifferences.class
-/CryptographersConundrum.class
-/ColdPuterScience.class
-/Bela.class
-/Apaxiaaaaaaaaaaaans.class
-/AlphabetSpam.class
-/IveBeenEverywhereMan.class
-/SymmetricOrder.class
-/LeftBeehind.class
-/FlyingSafely.class
 /ARealChallenge.class
-/UnlockPattern.class
-/HittingTheTargets.class
-/Rectangle.class
-/Circle.class
-/Heliocentric.class
-/Bishops.class
-/ExamRedistribution.class
-/Room$ExamRedistribution.class
-/Room.class
-/BobbysBet.class
-/EightQueens.class
-/Queen.class
-/GoldbachsConjecture.class
-/Pot.class
+/AlphabetSpam.class
+/Apaxiaaaaaaaaaaaans.class
 /Autori.class
-/Tarifa.class
-/Spavanac.class
-/ProvincesAndGold.class
-/Pet.class
-/HeartRate.class
+/Bela.class
+/Bijele.class
+/Bishops.class
+/Cake.class
